--- a/website/src/pages/examples/styles.module.css
+++ b/website/src/pages/examples/styles.module.css
@@ -10,3 +10,9 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.tabsContainer {
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+}
