--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-primary: #39cac4;
+  --ifm-color-primary-dark: #31b8b2;
+  --ifm-color-primary-darker: #2eaea8;
+  --ifm-color-primary-darkest: #268f8b;
+  --ifm-color-primary-light: #4dcfca;
+  --ifm-color-primary-lighter: #58d2cd;
+  --ifm-color-primary-lightest: #76dad6;
   --ifm-code-font-size: 95%;
 }
 
